--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Daniel Valdez | hello@daniel-valdez.com | daniel-valdez.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
